Update and rename lucknow/homenew.html to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<nav id="navbar" class="nav">
-			<a href="homenew.html" class="active">Home</a>
+			<a href="index.html" class="active">Home</a>
 			<a href="aboutnew.html">About Me</a>
 			<a href="citynew.html">About The City</a>
 			<a href="#contact-me">Contact Me</a>
